--- a/client/css/style.css
+++ b/client/css/style.css
@@ -4,16 +4,14 @@ body {
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
-#play-btn-container
-{
+#play-btn-container {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100%;
 }
 
-canvas
-{
+canvas {
     width: 100%;
     height: 100%;
     display: block;
